refactor: standardize error messages; fix SonarQube issues; optimize imports